--- a/web_dasar/assets/styles/style.css
+++ b/web_dasar/assets/styles/style.css
@@ -30,3 +30,21 @@ footer {
   text-align: center;
   font-weight: bold;
 }
+
+.featured-image {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.profile img {
+  width: 200px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 20px;
+  margin-top: 20px;
+}
