--- a/web_dasar/assets/styles/style.css
+++ b/web_dasar/assets/styles/style.css
@@ -2,6 +2,8 @@
 
 body {
   font-family: "Quicksand", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h2,
@@ -47,4 +49,34 @@ footer {
   border-radius: 5px;
   padding: 20px;
   margin-top: 20px;
+}
+
+.jumbotron {
+  padding: 60px;
+  background-color: #00c8eb;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+}
+
+nav li {
+  display: inline;
+  list-style-type: none;
+  margin-right: 20px;
+}
+
+nav {
+  background-color: #00a2c6;
+  padding: 5px;
+}
+
+nav a {
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
+  color: white;
+}
+
+main {
+  padding: 20px;
 }
