--- a/web_dasar/assets/styles/style.css
+++ b/web_dasar/assets/styles/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Quicksand", sans-serif;
   margin: 0;
@@ -79,4 +83,16 @@ nav a {
 
 main {
   padding: 20px;
+  overflow: auto;
+}
+
+#content {
+  float: left;
+  width: 75%;
+}
+
+aside {
+  float: right;
+  width: 25%;
+  padding-left: 20px;
 }
